Add remaining events.